test/classes/errors/nilability-init-field-arg/init-field-arg-nonnil-borrowed-from-oknil-borrowed.good
init-field-arg-nonnil-borrowed-from-oknil-borrowed.chpl:9: In initializer:
init-field-arg-nonnil-borrowed-from-oknil-borrowed.chpl:10: error: cannot initialize field MyRecord.lhs of non-nilable type 'borrowed MyClass' from a nilable 'borrowed MyClass?'
  init-field-arg-nonnil-borrowed-from-oknil-borrowed.chpl:14: called as MyRecord.init(rhs: borrowed MyClass?)
